[gd_scene load_steps=5 format=3 uid="uid://cuhpwkg2m1t60"]

[ext_resource type="Texture2D" uid="uid://bj5xigdm42cst" path="res://Background.png" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://c5yxqvrhennwj" path="res://card_manager.gd" id="2_h2yge"]
[ext_resource type="PackedScene" uid="uid://2nglv0jx4lil" path="res://ui.tscn" id="3_h2yge"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h2yge"]
size = Vector2(125.892, 309)

[node name="Main" type="Node2D"]
script = ExtResource("2_h2yge")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(954, 561)
scale = Vector2(0.998233, 1)
texture = ExtResource("1_ig7tw")

[node name="DeckSlot" type="Node2D" parent="."]
position = Vector2(280, 545)
scale = Vector2(-1.541, 1)

[node name="SlotImage" type="Sprite2D" parent="DeckSlot"]

[node name="Area2D" type="Area2D" parent="DeckSlot"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeckSlot/Area2D"]
position = Vector2(1.9468, -4)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_h2yge")

[node name="UI" parent="." instance=ExtResource("3_h2yge")]

[node name="PlayerHand" type="Node2D" parent="."]
position = Vector2(928, 763)

[node name="DealerHand" type="Node2D" parent="."]
position = Vector2(934, 246)
scale = Vector2(1.03825, 1.38685)

[node name="CardHolder" type="Node2D" parent="."]

[node name="OffScreenStartMarker" type="Marker2D" parent="."]
position = Vector2(-760, 1124)

[node name="DealerHandMarker" type="Marker2D" parent="."]
position = Vector2(936, 164)

[node name="DeckPileMarker" type="Marker2D" parent="."]
position = Vector2(278, 544)
scale = Vector2(0.939278, 0.244732)

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(1273, 866)
